# cmake_learn

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cpp
MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cpp  mysqrt.h
cmake/: StaticAnalyzers.cmake
